<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
<group android:checkableBehavior="single">
  <item
    android:id="@+id/sort_by"
    android:title="@string/sortby">
    <menu>
      <item
        android:id="@+id/menu_priority_high"
        android:title="@string/priority_high" />

      <item
        android:id="@+id/menu_priority_low"
        android:title="@string/priority_low" />
    </menu>
  </item>

</group>

  <item
    android:id="@+id/search_menu"
    android:icon="@drawable/ic_baseline_search_24"
    android:title="@string/search"
    app:actionViewClass="android.widget.SearchView"
    app:showAsAction="ifRoom" />

  <item
    android:id="@+id/delete_all"
    android:title="@string/delete_all"
    app:showAsAction="never" />
</menu>